@@ -31,11 +31,12 @@ fixed:
 - PeptideDialog: deletion of sequence
 - problem with normals in Cartoon model
 - doubled performance of SnapShot Visualisation
+- SnapShotVisualisation Dialog could cause core dump
 - issue with restoring window's geometry on X11 (still buggy on some X-Servers)
 - restoring of working dir
 - MDS dialog: switching off storing to trajectory file
 - Scene: mouse sensitivity was adjusted
-- now show correctly number of added bonds
+- now show the correct number of added bonds
 
 changed:
 - inside of surfaces gets now correctly drawn
